--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 	<center>
 		<big>
-<h1>11 Nigerian Best Foods(+ Recipe)</h1>
+			<b>
+<h1><font size="8">11 Nigerian Best Foods</h1></font></b>
       </big>
 </center>
 <br>
@@ -16,88 +17,109 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <br>
 <br>
-<p><font size="5" >Sick of your usual Weekly meal Rotation? Let those colorful and flavorful Nigerian Foods Excite Your Palate!</p></font>
-<p><font size="5">Nigerian Cuisine is one of the best in africa and in the world.Primalarily Featuring Starchy vegetables,hearty stews,andn lots of herbs and spices,Nigerian Dishes are a treat for all the senses.Even if you can't book a ticket to Nigeria,You can still enjoy the delicious dishes the country has to offer.</p></font>
-<p><font size="5">With this collection of easy recipes,you'll immerse yourself in the wonderfuk culinary world of Nigeria.Give your taste buds a break from your typical weekday lunch or dinner! Treat yourself to a delectable Nigeria Dish,instead.</font></p>
+<b>
+<p><font size="9" >Sick of your usual Weekly meal Rotation? Let those colorful and flavorful Nigerian Foods Excite Your Palate!</p></font>
+<p><font size="9">Nigerian Cuisine is one of the best in africa and in the world.Primalarily Featuring Starchy vegetables,hearty stews,andn lots of herbs and spices,Nigerian Dishes are a treat for all the senses.Even if you can't book a ticket to Nigeria,You can still enjoy the delicious dishes the country has to offer.</p></font>
+<p><font size="9">With this collection of easy recipes,you'll immerse yourself in the wonderfuk culinary world of Nigeria.Give your taste buds a break from your typical weekday lunch or dinner! Treat yourself to a delectable Nigeria Dish,instead.</font></p>
 <br>
 <ol>
-<font size="5"><li>Jollof Rice</li></font>
-	<p><font size="5" >Just as rice is a staple in Many Asian and Latin American Countries,it is in Nigerian,too.Jollof rice,at its core,is rice cooked with tomato,onion,pepper,and spices.This ubiquitous dish is present on both special occasions and regular meals.</font></p>
+<font size="6"><li>Jollof Rice</li></font>
+<big>
+	<p><font size="9" >Just as rice is a staple in Many Asian and Latin American Countries,it is in Nigerian,too.Jollof rice,at its core,is rice cooked with tomato,onion,pepper,and spices.This ubiquitous dish is present on both special occasions and regular meals.</font></p>
 	<br>
-	<img src="jollofrice.jpg.jpg" width="350px">
-<p><font size="5">Not only is this dish popular in Nigeria, but in other African countries as well,such as Ghana.With its rich flavors,i'm not suorised why.other variations include vegetables or a type of meat,such as beef,fish,or chicken.</font></p>
+	<img src="jollofrice.jpg.jpg" width="450px">
+<p><font size="9">Not only is this dish popular in Nigeria, but in other African countries as well,such as Ghana.With its rich flavors,i'm not suorised why.other variations include vegetables or a type of meat,such as beef,fish,or chicken.</font></p></big>
 <br>
 <br>
-	<font size="5"><li>Egusi soup</li></font>
-	<p><font size="5">Egusi soup is a Nigerian delicacy that features ground melon or pumpkin seeds as its main ingredient.other ingredients include meat or seafood,fermented beans,onins and vegetables.</font></p>
+	<font size="6"><li>Egusi soup</li></font>
+	<big>
+	<p><font size="9">Egusi soup is a Nigerian delicacy that features ground melon or pumpkin seeds as its main ingredient.other ingredients include meat or seafood,fermented beans,onins and vegetables.</font></p>
 	<br>
-	<img src="egusi.jpg.jpg" width="350px">
-	<p><font size="5">The combination of ingredients makes for a flavorful soup.Thanks to the pupkin deeds(egusi),this soup has a wonderful nuttiness to it.The rest of the ingredients add salty,savory and spicy flavors as well.The heart soup is most commonly eaten with pounded yam,which is a dough-based dish made of suprise-pounded yam.</font></p>
-	<br>
-	<br>
-	<font size="5"><li>Moi Moi</li></font>
-	<p><font size="5">Moi Moi is a Nigerian steamed pudding made from black-eyed peas,bouillon,dried crayfish,onions and grounded peppers.it siunds like such a crazy combinations,ut it works! Moi Moi has either a cylindrical or pyramid shape,depending on the mold used to make it.</p></font>
-	<br>
-	<img src="moimoi.jpg.jpg" width="320px">
-	<font size="5"><p>The molds are then placed in a pot of boiling water,steaming the misture and turning it into pudding.The tasty delicacy can be enjoyed on its own or eaten with jollof rice or fried plantains.</font></p>
+	<img src="egusi.jpg.jpg" width="450px">
+	<p><font size="9">The combination of ingredients makes for a flavorful soup.Thanks to the pupkin deeds(egusi),this soup has a wonderful nuttiness to it.The rest of the ingredients add salty,savory and spicy flavors as well.The heart soup is most commonly eaten with pounded yam,which is a dough-based dish made of suprise-pounded yam.</font></p>
+</big>
 	<br>
 	<br>
-	<font size="5"><li>Fufu</li></font>
-	<p><font size="5">Fufu is a large starchy dumpling made of equal parts green plantainn flour,cassava,and water.it's another Nigerian staple that's alson popular in many west African Countries. Traditional fuf is made by manually poundng the ingredients using a mortar and pestle. </font></p>
+	<font size="6"><li>Moi Moi</li></font>
+	<big>
+	<p><font size="9">Moi Moi is a Nigerian steamed pudding made from black-eyed peas,bouillon,dried crayfish,onions and grounded peppers.it siunds like such a crazy combinations,ut it works! Moi Moi has either a cylindrical or pyramid shape,depending on the mold used to make it.</p></font>
 	<br>
-	<img src="fufu.jpg.jpg" width="330">
-	<p><font size="5">For this recipe,however,you'll keep it simple by using a food processor.Nigerian customer dictate the fufu be eaten by hand.it's served family-style,where people can pull off a small chunk of fuf,roll it into a small chunk of fufu,roll it into a ball,make an indentation in the center with their thumb and dip it into a soup or stew.</font></p>
-	<br>
-	<br>
-	<font size="5"><li>Nigerian Tomato stew</li></font>
-		<p><font size="5">Nigerian Tomato Stew has alovely red hue and delicious bold flavors.with rich tomatoes as its flavor base,this stew is truly enticing.Additional flavor agents include onions,bouillon,curry,thyme,garlic,and peppers.</font></p>
-	<br>
-	<img src="stew.jpg.jpg" width="320px">
-	<p><font size="5">What gives its distint flavor,though,is the gamey ram.Because it's very expensive,this protein is considered celebratory meat and is often only served during special occassions,such as the islamic holiday,Eib-el Kabir,Christmas day.</font></p>
+	<img src="moimoi.jpg.jpg" width="420px">
+	<font size="9"><p>The molds are then placed in a pot of boiling water,steaming the misture and turning it into pudding.The tasty delicacy can be enjoyed on its own or eaten with jollof rice or fried plantains.</font></p>
+</big>
 	<br>
 	<br>
-	<font size="5"><li>Ogbono soup</li></font>
-	<p><font size="5">Ogbono soup has a slippery texture and a rich flavor. it's also sometimes referred to as "draw soup," because of its mucilaginous texture.Admittedly,the consistency takes a bit of getting used to,but once you d,you'll fall hard.it gets its distinct texture from ogbono a type of wild mango.interestingly,it's the seeds that are added,not the flesh.</font></p>
+	<font size="6"><li>Fufu</li></font>
+	<big>
+	<p><font size="9">Fufu is a large starchy dumpling made of equal parts green plantainn flour,cassava,and water.it's another Nigerian staple that's alson popular in many west African Countries. Traditional fuf is made by manually poundng the ingredients using a mortar and pestle. </font></p>
 	<br>
-	<img src="ogbono.jpg.jpg" width="320px">
-	<p><font size="5">Besides the ogbono seeds,the soup also features dried fish,stockfish,assorted meat,and spies.The different ingredients combine to create a medley of flavors and textures.ogbono soup is typically eaten with eba,pounded yam,or fufu.</font></p>
-	<br>
-	<br>
-	<font size="5"><li>Nigerian salad</li></font>
-	<p><font size="5">Nigerian salad is a colorful appetizer that features a myriads of raw and cooked vegetables,beans,pasta,eggs,and a lot more.The vegetables typically include lettuce,cabbage,tomatoes,cucumber,and corn.From the colors to the flavors to the textures,this salad gets 10s across the board.</font></p>
-	<br>
-	<img src="salad.jpg.jpg" width="320px">
-	<p><font size="5">Since it's very hearty,it can be served as ameal on it's own.but it's also coommonly paired with jollof rice or fried chicken.</font></p>
+	<img src="fufu.jpg.jpg" width="430">
+	<p><font size="9">For this recipe,however,you'll keep it simple by using a food processor.Nigerian customer dictate the fufu be eaten by hand.it's served family-style,where people can pull off a small chunk of fuf,roll it into a small chunk of fufu,roll it into a ball,make an indentation in the center with their thumb and dip it into a soup or stew.</font></p>
+</big>
 	<br>
 	<br>
-	<font size="5"><li>Amala</li></font>
-	<p><font size="5">Amala is a Nigerian delicacy made of yam flour cooked in boiling water until it forms a dough.The dough is kneaded to become smooth and lumpfree the trademark of a perfect amala.While yam flour is white,it changed in color when dried,which is why amala is brown.</font></p>
+	<font size="6"><li>Nigerian Tomato stew</li></font>
+	<big>
+		<p><font size="9">Nigerian Tomato Stew has alovely red hue and delicious bold flavors.with rich tomatoes as its flavor base,this stew is truly enticing.Additional flavor agents include onions,bouillon,curry,thyme,garlic,and peppers.</font></p>
 	<br>
-	<img src="amala.jpg.jpg" width="350px">
-	<p><font size="5">Amala is alot similar to fufu but a bit softer.just like its cousin,it's also typically eaten with soups such as ogbono and egusi</font></p>
-	<br>
-	<br>
-	<font size="5"><li>Nigerian Chicken stew</li></font>
-	<p><font size="5">Chicken stew is a hearty dish of chicken thighs cooked in tomatoes,pepppers,and a rich,savory sauce.what makes this stew stand out from the rest is the variety of spices that go into the sauce.</font></p>
-	<br>
-	<img src="chicken.jpg.jpg" width="350px">
-	<p><font size="5">From curry and thyme to red,black,and habanero peppers,this stew isn't for the week.To cut through the heat,enjoy this spicy stew with a side of amala or fufu.</font></p>
+	<img src="stew.jpg.jpg" width="420px">
+	<p><font size="9">What gives its distint flavor,though,is the gamey ram.Because it's very expensive,this protein is considered celebratory meat and is often only served during special occassions,such as the islamic holiday,Eib-el Kabir,Christmas day.</font></p>
+</big>
 	<br>
 	<br>
-	<font size="5"><li>Rice tuwo(Tuwo Shinkafa)</li></font>
-	<p><font size="5" >Tuwo shinkafa is atype of rice pudding.it's neither sweet nor savory,though.The only Two ingredients in the recipe are rice and water</font></p>
+	<font size="6"><li>Ogbono soup</li></font>
+	<big>
+	<p><font size="9">Ogbono soup has a slippery texture and a rich flavor. it's also sometimes referred to as "draw soup," because of its mucilaginous texture.Admittedly,the consistency takes a bit of getting used to,but once you d,you'll fall hard.it gets its distinct texture from ogbono a type of wild mango.interestingly,it's the seeds that are added,not the flesh.</font></p>
 	<br>
-	<img src="tuwo.jpg.jpg" width="350px">
-	<p><font size="5">Unlike other rice recipes,you want your rice to be super soft and mushy to achieve the perfect tuwo.Once cooked,the rice is mashed and formed into balls,it's then served alongside soup or stew.</font></p>
+	<img src="ogbono.jpg.jpg" width="420px">
+	<p><font size="9">Besides the ogbono seeds,the soup also features dried fish,stockfish,assorted meat,and spies.The different ingredients combine to create a medley of flavors and textures.ogbono soup is typically eaten with eba,pounded yam,or fufu.</font></p>
+</big>
 	<br>
 	<br>
-	<font size="5"><li>Eba</li></font>
-
-	<p><font size="5">Last on our list is the nigerian eba,a Nigerian staple made from garri or ground friend cassava.The cassava is typically cooked in boiling water to form a dough that you then shape into balls and serve with stew or soup.</font></p>
+	<font size="6"><li>Nigerian salad</li></font>
+	<big>
+	<p><font size="9">Nigerian salad is a colorful appetizer that features a myriads of raw and cooked vegetables,beans,pasta,eggs,and a lot more.The vegetables typically include lettuce,cabbage,tomatoes,cucumber,and corn.From the colors to the flavors to the textures,this salad gets 10s across the board.</font></p>
 	<br>
-	<img src="eba.jpg.jpg" width="350px">
-	<p><font size="5">Eba can either be yellow or white and you can easily achieve it by adding or omitting palm oil.This recipe teaches you how to make eba on the stovetop,in the microwave,or a bowl!Pretty neat.</font></p>
+	<img src="salad.jpg.jpg" width="420px">
+	<p><font size="9">Since it's very hearty,it can be served as ameal on it's own.but it's also coommonly paired with jollof rice or fried chicken.</font></p>
+</big>
+	<br>
+	<br>
+	<font size="6"><li>Amala</li></font>
+	<big>
+	<p><font size="9">Amala is a Nigerian delicacy made of yam flour cooked in boiling water until it forms a dough.The dough is kneaded to become smooth and lumpfree the trademark of a perfect amala.While yam flour is white,it changed in color when dried,which is why amala is brown.</font></p>
+	<br>
+	<img src="amala.jpg.jpg" width="450px">
+	<p><font size="9">Amala is alot similar to fufu but a bit softer.just like its cousin,it's also typically eaten with soups such as ogbono and egusi</font></p>
+</big>
+	<br>
+	<br>
+	<font size="6"><li>Nigerian Chicken stew</li></font>
+	<big>
+	<p><font size="9">Chicken stew is a hearty dish of chicken thighs cooked in tomatoes,pepppers,and a rich,savory sauce.what makes this stew stand out from the rest is the variety of spices that go into the sauce.</font></p>
+	<br>
+	<img src="chicken.jpg.jpg" width="450px">
+	<p><font size="9">From curry and thyme to red,black,and habanero peppers,this stew isn't for the week.To cut through the heat,enjoy this spicy stew with a side of amala or fufu.</font></p>
+</big>
+	<br>
+	<br>
+	<font size="6"><li>Rice tuwo(Tuwo Shinkafa)</li></font>
+	<big>
+	<p><font size="9" >Tuwo shinkafa is atype of rice pudding.it's neither sweet nor savory,though.The only Two ingredients in the recipe are rice and water</font></p>
+	<br>
+	<img src="tuwo.jpg.jpg" width="450px">
+	<p><font size="9">Unlike other rice recipes,you want your rice to be super soft and mushy to achieve the perfect tuwo.Once cooked,the rice is mashed and formed into balls,it's then served alongside soup or stew.</font></p>
+</big>
+	<br>
+	<br>
+	<font size="6"><li>Eba</li></font>
+	<big>
+	<p><font size="9">Last on our list is the nigerian eba,a Nigerian staple made from garri or ground friend cassava.The cassava is typically cooked in boiling water to form a dough that you then shape into balls and serve with stew or soup.</font></p>
+	<br>
+	<img src="eba.jpg.jpg" width="450px">
+	<p><font size="9">Eba can either be yellow or white and you can easily achieve it by adding or omitting palm oil.This recipe teaches you how to make eba on the stovetop,in the microwave,or a bowl!Pretty neat.</font></p></big>
 </ol>
+</b>
 
 </head>
 <body>
